added h1, input box, and todos table

--- a/lists/templates/lists/home_page.html
+++ b/lists/templates/lists/home_page.html
@@ -5,6 +5,11 @@
     <title>To-Do lists</title>
 </head>
 <body>
+    <h1>Your To-Do list</h1>
+    <label for="new-item">Add to-do item:</label>
+    <input id="new-item" type="text" placeholder="Enter a to-do item">
+<table id="todos-table">
 
+</table>
 </body>
 </html>
