adding new to-do item to a list

--- a/lists/templates/lists/list.html
+++ b/lists/templates/lists/list.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Your To-Do list</h1>
-    <form method="POST" action="/lists/new/">
+    <form method="POST" action="/lists/{{ list.id }}/create/">
         {% csrf_token %}
         <label for="new-item">Add to-do item:</label>
         <input id="new-item" name="new-item" type="text" placeholder="Enter a to-do item">
