--- a/lists/templates/lists/list.html
+++ b/lists/templates/lists/list.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block items_table %}
-    <table id="todos-table">
+    <table id="todos-table" class="table table-responsive">
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.text }}</td>
