--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,26 +1,46 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do lists</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="{%  static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/base.css' %}" rel="stylesheet">
 </head>
-<body>
-    <h1>{% block header_text %}
-            Your To-Do list
-        {% endblock %}
-    </h1>
-    <form method="POST"
-          action="{% block form_action %}{% endblock %}"
-    >
-        {% csrf_token %}
-        <p style="text-align: center">
-            <label for="new-item">Add to-do item:</label>
-            <input id="new-item" name="new-item" type="text" placeholder="Enter a to-do item">
-        </p>
-    </form>
-    {% block items_table %}
-    {% endblock %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 p-5 offset-md-3 mb-4 bg-light rounded-3 text-center">
+                <div>
+                    <h1>{% block header_text %}
+                            Your To-Do list
+                        {% endblock %}
+                    </h1>
+                    <form method="POST"
+                          action="{% block form_action %}{% endblock %}"
+                    >
+                        {% csrf_token %}
+{#                            <label for="new-item"#}
+{#                                   class="col-form-label-lg"#}
+{#                            >#}
+{#                                Add to-do item:#}
+{#                            </label>#}
+                            <input id="new-item" name="new-item"
+                                   type="text"
+                                   placeholder="Enter a to-do item"
+                                   class="form-control-lg"
+                            />
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                {% block items_table %}
+                {% endblock %}
+            </div>
+        </div>
+    </div>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
